--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Start your development with DevalMali landing page.">
-    <meta name="author" content="Devcrud">
+    <meta name="author" content="Deval">
     <title>Deval Mali | Data-Analyst</title>
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -43,7 +43,7 @@
                         <a href="#about" class="nav-link">About</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#resume" class="nav-link">Resume</a>
+                        <a href="#Resume" class="nav-link">Resume</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav brand">
@@ -74,7 +74,7 @@
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Data Analyst / Data Scientist   </h5>
                 <p class="mt-20">An ambitious data science graduate student,graduating in May 2023.</p>
-                <button class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My Resume</button>
+                <button onclick="window.location.href='https://github.com/devalmali/Portfolio/raw/main/assets/imgs/Resume_DS_Deval_Mali.pdf'" class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My Resume</button>
             </div>
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
