--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                 <div class="col-lg-8">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
-                        <form action="">
+                        <form action="https://formsubmit.co/devalmali14@gmail.com" method="POST">
                             <div class="form-group">
                                 <input  class="form-control" type="text" placeholder="Name *" required>
                             </div>
