--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <section class="section bg-dark py-5">
         <div class="container text-center">
             <h2 class="text-light mb-5 font-weight-normal">I am actively looking for a Full-Time Job Opportunity as a Data Analyst.</h2>
-            <button class="btn bg-primary w-lg" >Hire me</button>
+            <button class="btn bg-primary w-lg" onclick="window.location.href='mailto: devalmali14@gmail.com'">Hire me</button>
         </div>
     </section>
 
@@ -260,17 +260,18 @@
                 <div class="col-lg-8">
                     <div class="contact-form-card">
                         <h4 class="contact-title">Send a message</h4>
-                        <form target="_blank" action="https://formsubmit.co/devalmali14@gmail.com" method="POST">
+                        <form action="https://formsubmit.co/6044f1503ed4907e6a3dc3f7965bfb36" method="POST">
                             <div class="form-group">
-                                <input  class="form-control" type="text" placeholder="Name *" required>
+                                <input  class="form-control" type="text" name="name" placeholder="Name *" required>
                             </div>
                             <div class="form-group">
-                                <input class="form-control" type="email" placeholder="Email *" required>
+                                <input class="form-control" type="email" name="email" placeholder="Email *" required>
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control" id=" placeholder="Message *" rows="7" required></textarea>
+                                <textarea class="form-control" name="message" placeholder="Message *" rows="7" required></textarea>
                             </div>
-                            <div class="form-group ">
+                           
+                            <div class="text-center">
                                 <button type="submit" class="form-control btn btn-primary" >Send Message</button>
                             </div>
                         </form>
