--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="header-content">
                 <h4 class="header-subtitle" >Hello, I am</h4>
                 <h1 class="header-title">Deval Mali</h1>
-                <h6 class="header-mono" >Data Analyst | Data Scientist | Machine Learning Specialist</h6>
+                <h6 class="header-mono" >Data Analyst | Data Scientist | Machine Learning Engineer</h6>
                 </div>
         </div>
     </header>
@@ -72,7 +72,7 @@
                 <h3 class="font-weight-light">Who am I ?</h3>
                 <span class="line mb-5"></span>
                 <h5 class="mb-3">A Data Analyst / Data Scientist   </h5>
-                <p class="mt-20">An ambitious data science graduate student,graduating in May 2023.</p>
+                <p class="mt-20">An ambitious data science graduate student,graduating in May 2023. My aim is to deliver good machine learning model using data analysis tools and techniques from which our society gets benefited.</p>
                 <button onclick="window.location.href='https://github.com/devalmali/Portfolio/raw/main/assets/imgs/Resume_DS_Deval_Mali.pdf'" class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My Resume</button>
             </div>
             <div class="col-lg-4 about-card">
@@ -97,7 +97,7 @@
                     <div class="col-1 text-danger pt-1"><i class="ti-widget icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
                         <h6>Data Visualization</h6>
-                        <p class="subtitle">Using Tableau, Matplotlib, Seaborn, SAS Studio, Microsoft Excel.</p>
+                        <p class="subtitle">Using Tableau, Power BI, Matplotlib, Seaborn, SAS Studio, Microsoft Excel.</p>
                         <hr>
                     </div>
                 </div>
@@ -112,8 +112,16 @@
                 <div class="row">
                     <div class="col-1 text-danger pt-1"><i class="ti-stats-up icon-lg"></i></div>
                     <div class="col-10 ml-auto mr-3">
-                        <h6>Model Building</h6>
+                        <h6>ML/Statistical Model Building & Database</h6>
                         <p class="subtitle">Python, R, SQL</p>
+                        <hr>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="icons"><i class="bi bi-code"></i></div>
+                    <div class="col-10 ml-auto mr-3">
+                        <h6>Other Programming Languages</h6>
+                        <p class="subtitle">C, C++, Java, HTML, CSS, PHP</p>
                         <hr>
                     </div>
                 </div>
