--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <p class="mt-20">An ambitious data science graduate student,graduating in May 2023. My aim is to deliver good machine learning model using data analysis tools and techniques from which our society gets benefited.</p>
                 <button onclick="window.location.href='https://github.com/devalmali/Portfolio/raw/main/assets/imgs/Resume_DS_Deval_Mali.pdf'" class="btn btn-outline-danger"><i class="icon-down-circled2 "></i>Download My Resume</button>
             </div>
+    
             <div class="col-lg-4 about-card">
                 <h3 class="font-weight-light">Personal Info</h3>
                 <span class="line mb-5"></span>
@@ -126,6 +127,7 @@
                     </div>
                 </div>
             </div>
+            
         </div>
     </div>
 
@@ -265,6 +267,33 @@
                                 <div class="progress-bar bg-danger" role="progressbar" style="width: 99%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="pull-left">
+                                <h4 class="mt-2">Extracurricular Activity</h4>
+                                <span class="line"></span>
+                            </div>
+                        </div>
+                        <div class="card-body pb-2">
+                         <h6 class="mb-3"><a href="https://www.artofliving.org/us-en">Art Of Living</a> Programs:</h6>
+                         <ul class="mt40 info list-unstyled">
+                            <li><span><a href="https://members.us.artofliving.org/us-en/lp/online-course-2">Happiness Program/SKY Breath Meditation Course :</a></span>
+                                <ul><li>In this course, I learnt SKY Breath Meditation, a powerful breathing techniques to quickly quiet our mind and make meditation easy.</li></ul>
+                            <li><span><a href="https://www.artofliving.org/us-en/sahaj-samadhi-meditation">Sahaj Samadhi Meditation :</a></span>
+                                <ul>
+                                 <li>Experience Deep Inner Peace—the State of Samadhi.</li>
+                                 <li>Increase Self-Awareness, Clarity and Creativity.</li>
+                                 <li>Become Fully Proficient in Just a Few Hours.</li>
+                                </ul>
+                            <li><span><a href="https://www.artofliving.org/us-en/silence-retreat">Advance Meditaion Program/Silence Retreat :</a></span>
+                             <ul> 
+                                <li>Get much needed rest in an all-inclusive guided retreat.</li>
+                                <li>Go deeper with advanced guided meditations, silent inquiry and rejuvenating yoga.</li>
+                                <li>Realign with your inner truth.</li>
+                             </ul>
+                             </li>
+                         </ul>
                     </div>
                 </div>
             </div>
